# a-antigravity

./: .env.template  .gitignore  DEPLOYMENT.md  Dockerfile  HOW_TO_RUN.md  Launch Antigravity.bat  README.md  api_server.py  app.py  pyproject.toml  requirements.txt
feedback/: .gitkeep
tools/: 0_launcher.py  0_schema_parser.py  1_ingest_clean.py  2_statistical_engine.py  3_ai_commentator.py  3_conjoint_designer.py  4_export_deliver.py  5_archive_outputs.py  5_skill_commit.py  6_notebook_generator.py  7_powerbi_export.py  github_auth.py  ingest_clean.py  llm_auth.py  pinecone_auth.py  schema_parser.py  sharepoint_auth.py  sharepoint_feedback.py
